# Aegis-RAG

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  evaluate_retrieval.py  evaluation_results.json  package-lock.json  package.json  pyproject.toml  rename.py  render.yaml  requirements-cloud.txt  requirements.txt  test_llm.py
data/: chat_history.db
docs/: FRONTEND_DESIGN.md
electron/: main.js  preload.js  python-backend.js
renderer/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
renderer/public/fonts/: README.md
renderer/src/: App.jsx  index.css
renderer/src/components/: ErrorBoundary.jsx
renderer/src/hooks/: useKeyboardShortcuts.js  useStreamingResponse.js
renderer/src/services/: api.js
renderer/src/store/: store.js
renderer/src/utils/: score.js
src/: __init__.py  config.py  dependencies.py
src/api/: __init__.py  main.py  models.py
src/api/routes/: chat.py  (+6 more)
src/chat_history/: db.py
src/chunking/: __init__.py  chunker.py
src/embedding/: __init__.py  embedder.py
src/generation/: __init__.py  citations.py  guardrails.py  llm.py  llm_cloud.py
src/ocr/: __init__.py  deepseek_ocr.py  gemini_ocr.py  tesseract_ocr.py
src/processors/: __init__.py  base.py  csv_processor.py  docx_processor.py  image_processor.py  pdf_processor.py  voice_processor.py
src/retrieval/: __init__.py  hybrid.py  mmr.py  reranker.py  retriever.py
src/vectorstore/: __init__.py  chroma_store.py
tests/: retrieval_metrics.py  test_advanced_processors.py  test_core_modules.py
(+14 files in other folders)
