[project]
name = "aegis-rag"
version = "1.0.0"
description = "Offline Multimodal RAG System"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "HXMAN76"}
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "PyMuPDF>=1.23.0",
    "python-docx>=1.1.0",
    "chromadb>=0.4.22",
    "numpy>=1.24.0",
    "ollama>=0.1.6",
    "tqdm>=4.66.0",
    "tiktoken>=0.5.0",
    "sentence-transformers>=2.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
ocr = ["paddleocr>=2.7.0", "paddlepaddle>=2.5.0"]
voice = ["faster-whisper>=0.10.0", "librosa>=0.10.0", "soundfile>=0.12.0", "scikit-learn>=1.3.0", "scipy>=1.11.0"]
all = ["aegis-rag[ocr,voice]"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
